Added Cart but has bugs

--- a/WebContent/resources/css/style.css
+++ b/WebContent/resources/css/style.css
@@ -1084,7 +1084,7 @@ div.cart-collaterals ul.products li.product:hover .add_to_cart_button{background
 
 
 .cart-collaterals .shipping_calculator {
-  float: right;
+  /* float: right; */
   width: 40%;
 }
 
